@@ -11,7 +11,7 @@
 #  Copyright (c) 2006 Mats Bengtsson
 #  Copyright (c) 2006 Antonio Cano damas
 #  
-# $Id: Iax.tcl,v 1.18 2007-01-31 08:14:38 matben Exp $
+# $Id: Iax.tcl,v 1.19 2007-02-01 14:54:31 matben Exp $
 
 namespace eval ::Iax {
 
@@ -458,7 +458,6 @@ proc ::Iax::LoadPrefs {} {
 
     iaxclient::applyfilters $agc $aagc $comfort $noise $echo
 
-    if {0} {
     # Pick matching device name.
     foreach device [iaxclient::devices output] {
 	if { [lindex $device 0] eq $outputDevices} {
@@ -471,7 +470,6 @@ proc ::Iax::LoadPrefs {} {
 	    iaxclient::setdevices input [lindex $device 1]
 	    break
 	}
-    }
     }
     
     iaxclient::callerid $cidname $cidnum
