@@ -20,6 +20,7 @@ Coccinella-0.95.16 (200702??):
  o added collapsable and flexible toolbars
  o chat subject now set by pressing Return in subject field
  o users name attribute can now be edited directly in situ (in roster)
+ o faster chat history parsing
 
 Coccinella-0.95.15 (20061117):
 
